# geographiclib-octave

./: .gitignore  CMakeLists.txt  COPYING  DESCRIPTION.in  HOWTO-RELEASE.txt  INDEX  NEWS  README.md  makefile-admin
distrib-Octave/: 00README.md
inst/: CMakeLists.txt  Contents.m.in  cassini_fwd.m  cassini_inv.m  defaultellipsoid.m  ecc2flat.m  eqdazim_fwd.m  eqdazim_inv.m  flat2ecc.m  gedistance.m  gedoc.m  geocent_fwd.m  geocent_inv.m  geodarea.m  geoddistance.m  geoddoc.m  geodreckon.m  geographiclib_signtest.m  geographiclib_test.m  geoid_height.m  geoid_load.m  gereckon.m  gnomonic_fwd.m  gnomonic_inv.m  linesimp.m  loccart_fwd.m  loccart_inv.m  mgrs_fwd.m  mgrs_inv.m  polarst_fwd.m  polarst_inv.m  projdoc.m  tranmerc_fwd.m  tranmerc_inv.m  utmups_fwd.m  utmups_inv.m
inst/@triaxial/: accel.m  cart2norm.m  cart2rand.m  cart2tocart.m  cart2toellip.m  cart2togeocen.m  cart2togeod.m  cart2toparam.m  cartproj.m  carttocart2.m  carttoellip.m  carttogeocen.m  carttogeod.m  carttoparam.m  convert.m  demo.m  distance.m  doc.m  ellipflip.m  ellipnorm.m  elliptocart.m  elliptocart2.m  elliptogeod.m  elliptoparam.m  geocentocart.m  geocentocart2.m  geodtocart.m  geodtoellip.m  geodtoparam.m  horizon.m  hybrid.m  hybridint.m  paramtocart.m  paramtocart2.m  paramtoellip.m  paramtogeod.m  reckon.m  scaled.m  tests.m  triaxial.m
inst/@triaxial/private/: ell3check.m  fracx.m  is_octave.m  newtonx.m  remx.m  rotm.m  signx.m  vecabs.m  veccross.m  vecdot.m  vecunit.m
inst/private/: AngDiff.m  AngNormalize.m  AngRound.m  atan2dx.m  copysignx.m  remx.m  signbitx.m  sincosde.m  sincosdx.m  sumx.m
src/: CMakeLists.txt  Contents.m.in  geoddistance.m  geoddoc.m  geographiclib_test.m  projdoc.m
